# rs_classifiers

./: CMakeLists.txt  README.md  install_caffe_knn_obj_recognition.md
descriptors/typesystem/: all_types.xml
include/rs_addons/classifiers/: RSKNN.h  RSRF.h  RSSVM.h
src/: FCISInstanceSegmentationAnnotator.cpp  FasterRCNNDetectionAnnotator.cpp  KnnAnnotator.cpp  MaskRCNNInstanceSegmentationAnnotator.cpp  RfAnnotator.cpp  SSDDetectionAnnotator.cpp  SvmAnnotator.cpp
src/annotators/: TemplateAlignmentAnnotator.cpp
src/classifiers/: RSClassifier.cpp  RSKNN.cpp  RSRF.cpp  RSSVM.cpp
